--- a/frontend/index.css
+++ b/frontend/index.css
@@ -178,7 +178,7 @@ body {
 
 .element-controls {
     position: absolute;
-    top: -30px;
+    top:-30px;
     right: 0;
     display: none;
     background-color: #fff;
@@ -767,6 +767,45 @@ body {
     right: 10px;
     font-size: 24px;
     cursor: pointer;
+}
+
+/* New styles for additional elements */
+.audio-player {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.slider {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.slider-input {
+    width: 100%;
+}
+
+.rating {
+    font-size: 24px;
+    color: #f5a623;
+}
+
+.star {
+    cursor: pointer;
+}
+
+.star.active {
+    color: #f5a623;
+}
+
+.chart-container {
+    width: 100%;
+    height: 300px;
+}
+
+.countdown-timer {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
 }
 
 /* Responsive Styles */
